language/move-lang/tests/move_check/parser/struct_native_missing_semicolon.move
module M {
    native struct S // ;
}
